<resources>
    <string name="app_name">Note Taker</string>
    <string name="title_note_list">Smart Memo</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="not_verified_message">"It seems your account hasn't been verified yet. We've asked the admin to verify you. If you're sure you've been verified please logout and login again using your credentials."</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="title_dashboard">Home</string>
    <string name="title_memos">Memos</string>
    <string name="title_notifications">Alerts</string>
    <string name="title_admin">Admin</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
