<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_memos"
        android:icon="@drawable/ic_memos"
        android:title="@string/title_memos" />

    <item
        android:visible="false"
        android:id="@+id/navigation_admin"
        android:icon="@drawable/ic_supervisor_account"
        android:title="@string/title_admin" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/title_profile" />

</menu>
