<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="akil.co.tz.notetaker.NotificationListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_memos"
        android:name="akil.co.tz.notetaker.MemosFragment"
        android:label="@string/title_memos"
        tools:layout="@layout/fragment_memos" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="akil.co.tz.notetaker.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="akil.co.tz.notetaker.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_admin"
        android:name="akil.co.tz.notetaker.AdminFragment"
        android:label="fragment_admin"
        tools:layout="@layout/fragment_admin" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="akil.co.tz.notetaker.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/memoReadFragment"
        android:name="akil.co.tz.notetaker.MemoReadFragment"
        android:label="MemoReadFragment" >
        <argument android:name="memo" />
        <action
            android:id="@+id/action_memoReadFragment_to_memoProgressFragment"
            app:destination="@id/memoProgressFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
        <action
            android:id="@+id/action_memoReadFragment_self"
            app:destination="@id/memoReadFragment" />
    </fragment>
    <fragment
        android:id="@+id/memoReplyFragment"
        android:name="akil.co.tz.notetaker.MemoReplyFragment"
        android:label="MemoReplyFragment" >
        <argument android:name="memo" />
    </fragment>
    <fragment
        android:id="@+id/memoProgressFragment"
        android:name="akil.co.tz.notetaker.MemoProgressFragment"
        android:label="MemoProgressFragment" >
        <argument android:name="memo" />
    </fragment>

    <fragment
        android:id="@+id/pendingActivationFragment"
        android:name="akil.co.tz.notetaker.PendingActivationFragment"
        android:label="fragment_pending_activation"
        tools:layout="@layout/fragment_pending_activation">
        <argument android:name="name" />
    </fragment>

    <fragment
        android:id="@+id/VerifyUserFragment"
        android:name="akil.co.tz.notetaker.VerifyUserFragment"
        android:label="fragment_verify_user"
        tools:layout="@layout/fragment_verify_user">
        <argument android:name="user" />
    </fragment>
</navigation>